# project-template

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT.md  README.md  ROADMAP.md  cookiecutter.json  mkdocs.yml  pyproject.toml  tasks.bat  tasks.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-linux.yml  ci-windows.yml
docs/: README.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Makefile  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: ci-linux.yml  ci-windows.yml
{{cookiecutter.repo_name}}/docs/: index.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.project_slug}}/: __main__.py
