[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "{{ cookiecutter.author_name }}" }
]
license = { file = "LICENSE" }

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 88
